--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- test -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h4></h4>
+    <form action="#" method="GET">
+        <input type="text" name="code">
+        <img src="index.php" alt="">
+        <input type="submit">
+    </form>
+
 </body>
 </html>
