--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>登录</title>
 
     <link rel="stylesheet" href="/css/base.css">
     <link rel="stylesheet" href="/css/index.css">
@@ -14,30 +14,29 @@
 
 </head>
 <body></body>
-
     <!-- 背景 -->
     <div class="bgimg"></div>
-    <img src='image_code.php' alt= >
     <div class="login">
         <div class="box">
             <div class="header">基层社区防灾减灾一掌通</div>
             <div class="body">
-                <form action="">
+                <form action="http://localhost/login_temp.php" method="POST">
                     <div class="user">
                         <label for="user">用户名</label>
-                        <input type="text" name="user" id="user" required="required">
+                        <input type="text" name="username" id="user" required="required" autocomplete="off">
+                        <i class="clear"></i>
                     </div>
                     <div class="password">
                         <label for="password">密码</label>
-                        <input type="password" name="password" id="password" required="required" >
-                        <i></i>
+                        <input type="password" name="password" id="password" required="required" autocomplete="off">
+                        <i class="clear"></i>
+                        <i class="d-n-swithch"></i>
                     </div>
                     <div class="code">
-                        <label for="password">验证码</label>
-                        <input type="text" name="code" id="code" required="required" autocomplete="off">
-                        <img src="image_code.php" alt="">
+                        <input type="text" name="code" id="code" required="required" autocomplete="off" placeholder="请输入验证码">
+                        <img src="./image_code.php" alt="">
                     </div>
-                    <input type="submit" name="submit"id="submit" value="登录">
+                    <input type="submit" name="submit"id="submit" value="登录"  >
                 </form>
             </div>
         </div>
